Some changes to core role.
Started writing docs for everything

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = Database-Migrator
 author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
-copyright_holder = Dave Rolsky
+copyright_holder = MaxMind, LLC
 
 version = 0.01
 
