Add missing prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,10 @@ repository.type   = git
 
 [AutoPrereqs]
 
+[Prereqs]
+MooseX::Types = 0
+MooseX::Types::Path::Class = 0
+
 [CheckPrereqsIndexed]
 
 [@Git]
