Add spelling test

--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,11 @@ repository.type   = git
 [Test::CPAN::Changes]
 ;[Test::Pod::LinkCheck]
 [Test::Pod::No404s]
+[Test::PodSpelling]
+stopwords = DDL
+stopwords = OVERRIDEABLE
+stopwords = sql
+stopwords = unapplied
 
 [AutoPrereqs]
 
