--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = Database-Migrator
 author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
-copyright_holder = MaxMind, LLC
+copyright_holder = MaxMind, Inc.
 
 version = 0.06
 
