Use DROLSKY plugin bundle and fix failing pod coverage tests

--- a/dist.ini
+++ b/dist.ini
@@ -3,47 +3,15 @@ author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
 copyright_holder = MaxMind, Inc.
 
-version = 0.06
+version = 0.07
 
-[NextRelease]
-format = %-8v %{yyyy-MM-dd}d
-
-[@Basic]
-
-[InstallGuide]
-[MetaJSON]
-
-[MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Database-Migrator
-bugtracker.mailto = bug-database-migrator@rt.cpan.org
-repository.url    = git://git.urth.org/Database-Migrator.git
-repository.web    = http://git.urth.org/Database-Migrator.git
-repository.type   = git
-
-[SurgicalPodWeaver]
-
-[PkgVersion]
-
-[ContributorsFromGit]
-
-[EOLTests]
-[NoTabsTests]
-[PodSyntaxTests]
-[Test::CPAN::Changes]
-;[Test::Pod::LinkCheck]
-[Test::Pod::No404s]
-[Test::PodSpelling]
+[@DROLSKY]
+dist = Database-Migrator
 stopwords = DDL
 stopwords = OVERRIDEABLE
 stopwords = sql
 stopwords = unapplied
 
-[AutoPrereqs]
-
 [Prereqs]
 MooseX::Types = 0
 MooseX::Types::Path::Class = 0
-
-[CheckPrereqsIndexed]
-
-[@Git]
