Add more stopwords

--- a/dist.ini
+++ b/dist.ini
@@ -7,10 +7,13 @@ version = 0.11
 
 [@DROLSKY]
 dist = Database-Migrator
+stopwords = CPAN
+stopwords = DBI
 stopwords = DDL
 stopwords = OVERRIDEABLE
 stopwords = sql
 stopwords = unapplied
+stopwords = username
 
 [Prereqs]
 MooseX::Types = 0
