--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
-.\#*
-\#*\#
 *~
-blib*
-cover_db*
-Build
-_build
+.\#*
 .build
+/.tidyall.d
+Build
+Database-Migrator-*
+Debian_CPANTS.txt
 MANIFEST
 META.yml
 MYMETA.yml
-README
-Debian_CPANTS.txt
-Makefile.PL
 Makefile
+Makefile.PL
 Makefile.old
-pm_to_blib*
-Database-Migrator-*
+README
+\#*\#
+_build
 _trial_temp
+blib*
+cover_db*
+pm_to_blib*
