--- a/dist.ini
+++ b/dist.ini
@@ -2,6 +2,7 @@ name    = Database-Migrator
 author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
 copyright_holder = MaxMind, Inc.
+copyright_year = 2012
 
 [@DROLSKY]
 dist = Database-Migrator
