Skip Pod::Coverage for test class

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ copyright_year = 2012
 
 [@DROLSKY]
 dist = Database-Migrator
+pod_coverage_skip = Test::Database::Migrator
 stopwords = CPAN
 stopwords = DBI
 stopwords = DDL
