--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Artistic_2_0
 copyright_holder = MaxMind, Inc.
 copyright_year = 2012
 
-[@DROLSKY]
+[@MAXMIND]
 dist = Database-Migrator
 pod_coverage_skip = Test::Database::Migrator
 stopwords = CPAN
