--- a/tidyall.ini
+++ b/tidyall.ini
@@ -6,6 +6,7 @@ ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
+ignore = t/zzz-*
 ignore = xt/**/*
 argv = --profile=$ROOT/perlcriticrc
 
@@ -17,5 +18,17 @@ ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
+ignore = t/zzz-*
 ignore = xt/**/*
 argv = --profile=$ROOT/perltidyrc
+
+[Test::Vars]
+select = **/*.pm
+ignore = .build/**/*
+ignore = Database-Migrator-*/**/*
+ignore = blib/**/*
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = t/zzz-*
+ignore = xt/**/*
